# orgo-mcp

./: .dockerignore  .env.example  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  fly.toml  orgo_mcp.py  package-lock.json  package.json  parallel-solve.skill  pyproject.toml  render.yaml
.github/workflows/: ci.yml
orgo_mcp/: __init__.py  __main__.py  auth.py  client.py  errors.py  models.py  server.py
orgo_mcp/tools/: __init__.py  access.py  account.py  actions.py  agent.py  computers.py  files.py  shell.py  streaming.py  templates.py  threads.py  workspaces.py
scripts/: e2e-full.mjs  e2e-live.mjs  smoke-http.mjs  smoke-tools.mjs
src/: auth.ts  client.ts  errors.ts  index.ts  server.ts  terminal.ts  types.ts
src/tools/: access.ts  account.ts  actions.ts  agent.ts  computers.ts  files.ts  format.ts  index.ts  policy.ts  registry.ts  shell.ts  streaming.ts  system.ts  templates.ts  threads.ts  workspaces.ts
