[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orgo-mcp"
version = "1.0.0"
description = "MCP server for Orgo virtual computer control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nick Vasilescu" }
]
keywords = ["mcp", "orgo", "claude", "ai", "virtual-computer", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.8.0",
    "orgo>=0.0.38",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/nickvasilescu/orgo-mcp"
Documentation = "https://github.com/nickvasilescu/orgo-mcp#readme"
Repository = "https://github.com/nickvasilescu/orgo-mcp"
Issues = "https://github.com/nickvasilescu/orgo-mcp/issues"

[project.scripts]
orgo-mcp = "orgo_mcp:main"

[tool.hatch.build.targets.sdist]
include = [
    "orgo_mcp.py",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
